--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ body {
   font-family: Roboto, verdana;
   background-image: linear-gradient(180deg, rgba(131, 183, 210, 0.9), rgba(98, 126, 190, 0.9));
   background-repeat: no-repeat;
-  height: 100vh; }
+  height: 100vh;
+  overflow: hidden; }
 
 .weather-header {
   width: 100%;
@@ -42,9 +43,15 @@ body {
   height: 100vh; }
   .weather-main-container {
     display: flex;
-    justify-content: center; }
+    justify-content: center;
+    flex-direction: column;
+    align-items: center; }
   .weather-main > *:not(:last-child) {
     margin-bottom: 10rem; }
+
+.weather-content-main,
+.weather-content-sub {
+  text-align: center; }
 
 .weather-content-main {
   font-size: 2.5rem;
@@ -62,5 +69,6 @@ body {
   font-weight: 400;
   text-transform: uppercase; }
 
-.weather-content > *:not(:last-child) {
-  margin-bottom: 1.5rem; }
+.weatherIcon {
+  display: block;
+  margin-top: -10rem; }
